# web-of-science-with-label-texts

./: HUGGINGFACE_DATASET_README.md  README.md  pyproject.toml
src/dataset_splitter/: config.py  restructure_data.py
tests/: test_load_dataset.py  test_restructure_data.py
